--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 <body>
     <div class="form-container">
         <h2 class="text-center mb-4">Permutacion</h2>
+        <span>Trabajo realizado:  Jhonatan Barrera </span>
+        <span>                    Julian  Tejada </span>
         <form action="#" >
             <div class="form-group">
                 <label for="nombre">Numero 1</label>
